# ocurrent-deployer

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.md  Makefile  README.md  VM-host.md  create-config.sh  deployer.opam  dune  dune-project  example.opam
config/docker/contexts/meta/09fea0dc07141bd3c02d4dd93686c641ffd9287a14a95fe6bf819bf67a141c23/: meta.json
config/docker/contexts/meta/164166e560d44cd9b207f7e446ee4459eb869775585c95cbfa405dad66baf427/: meta.json
config/docker/contexts/meta/222627c92f892a32347161b5bc34d88a0e70ce7a5da0bc07c096a9dd36edfbbe/: meta.json
config/docker/contexts/meta/24a9362e41571d64bb261d1f176fc044301e55845d9244f271b78c4e4b486bac/: meta.json
config/docker/contexts/meta/2b2d409edce7cf1d000adf0d93ec45c8affa00363cc0cee5b647e860ef2d49ec/: meta.json
config/docker/contexts/meta/3048c57d19304ef3f485da51558a5b37bb3eda7620dac19f07ecd7e2d2299237/: meta.json
config/docker/contexts/meta/38f29d794d6f7ddc5309996ed09d54b07a0588d5a4d7c4138e6ce1b93ad04bbe/: meta.json
config/docker/contexts/meta/411a15d6649316f33a7eb115c879d24dc3f6b5688e38fe38818cc053832b4f6b/: meta.json
config/docker/contexts/meta/434fd5f6be88986a1e4a378bd665b6c9f7bc2c623fd377e225b19a4c8513a84e/: meta.json
config/docker/contexts/meta/56fe5c53b858bbb78cc4d56229528acead3e6be09990f60d5c708f2674cece3c/: meta.json
config/docker/contexts/meta/6c0dcd2cba7f359b29d02b965d70d8b6aeb7394836db6384ded7c2c07394ff86/: meta.json
config/docker/contexts/meta/6ce6614459df6fa5fca1d002379a00754f206df6154dfcc325f2894af06bcb6f/: meta.json
config/docker/contexts/meta/75863655a98cf38d6be04ce7c91c4443b2360db984183ffbf6b6a9bfd62e9572/: meta.json
config/docker/contexts/meta/785fbb919ce48909d07c00f8f020ae4d8608d5e2c87062e3ba331ae02bbe6282/: meta.json
config/docker/contexts/meta/84677fcbf2aff0c2f74b1311b1683e0d93e35c2194b0f3a3b034316d2a268b12/: meta.json
config/docker/contexts/meta/85e51a2d7cb3086f4caff38546519d492fa1c5ad2fee6bdf4c42687ad89edde6/: meta.json
config/docker/contexts/meta/865b6b0c768086ed52d8dff71fca86a0635ab3001e025c985d2ebf0dfdcf8620/: meta.json
config/docker/contexts/meta/8984accf3b8612c253dbddfe18cb5aed8aa59ca59b59c37b9e5f25ed6176e406/: meta.json
config/docker/contexts/meta/a5f2cc8e484f013284b86ee6c4f4887264788e1a0cd78266ecd4469ee8072769/: meta.json
config/docker/contexts/meta/a77f1509f723b53b18a8a3b318bd76feccd3b42c74837a5969142acf966436e3/: meta.json
config/docker/contexts/meta/a9e6c1dc5803fdb1e6c5b218d21ee11485539512bc5bd2d15f96c1ec91ac65e4/: meta.json
config/docker/contexts/meta/afefb91b38561ce4c5ed9f03d31ba2e93d8d878f6d2817a2851641fbdd290343/: meta.json
config/docker/contexts/meta/b3c506c7f8b30c3d66a3908d5d9da5f2208d7c9f582c7e65e0e30355fc1b725e/: meta.json
config/docker/contexts/meta/b44e0299c194837b0668195cde822e4ee2f6e33ac4cbfe9b33c7b80c1d829c46/: meta.json
config/docker/contexts/meta/ba1150bbbac461d20356cdb3bc6b30c848d3b2428fcf6137fa34b348cd8333fa/: meta.json
config/docker/contexts/meta/ba9e49ce0cf299df42d5541aaf98b68f550359b53c343f9f13df5772abfe59c7/: meta.json
config/docker/contexts/meta/c30fe6fb128f811a20ff4162ed1ea61df017611f3ca001f4f2076268e86f5f92/: meta.json
config/docker/contexts/meta/c51e4564f97259b68fd61b6f01ba95c993ae031c9ab97c0f4b70afaa553af033/: meta.json
config/docker/contexts/meta/c9ef5df64aef21d39b9494b009bc5cbede32f0a9724527d27652e1cc7c4c2331/: meta.json
config/docker/contexts/meta/e2a3976dbbabe32411be0fa35417e3f4076734fadab19cfb9a006357f10f7f3d/: meta.json
config/docker/contexts/meta/e2ddf162fd28fdeb9675b013fad861d25bda640290a0da7607f013c857bced50/: meta.json
config/docker/contexts/meta/e62ef33e3bd7a5dcb50bae6287f8ecb10f912074ca4b07c4a9e0e4b3dd99e954/: meta.json
config/docker/contexts/meta/f7a63c2955752c7cb5b817832776274c1ca8440a231f0a066229db8b907bad17/: meta.json
config/docker/contexts/meta/fc538d66e8238721d74e325d3eda3039bd251439797708520bf00cd8a91b363e/: meta.json
config/docker/contexts/meta/fc9a7ab500cf55a14c5119003639b4d8d72d53b9a1857581ab38d9c2fbda080d/: meta.json
config/ssh/: id_rsa  id_rsa.pub  known_hosts
doc/: doc.ml  dune  services.md
src/: access.ml  access.mli  aws.ml  build.ml  build.mli  caddy.ml  cluster.ml  docker_registry.ml  dune  index.ml  index.mli  local.ml  logging.ml  logging.mli  main.ml  metrics.ml  mirage.ml  mirage.mli  packet_unikernel.ml  pipeline.ml  pipeline.mli  s.ml  slack_channel.ml  slack_channel.mli
test/: dune  test.ml  test_index.ml
