(executables
 (public_names ocurrent-deployer ocurrent-deployer-local)
 (names main local)
 (libraries
   capnp-rpc-unix
   current
   current.cache
   current_git
   current_github
   current_docker
   current_ocluster
   current_slack
   current_web
   cmdliner
   fmt.tty
   logs.fmt
   str
   lwt
   lwt.unix)
 (preprocess (pps ppx_deriving.std ppx_deriving_yojson)))
